tests/programs/invalid/private_fields.java
public class private_fields {
  private int x;
}